--- a/app/src/main/res/layout/activity_fullscreen.xml
+++ b/app/src/main/res/layout/activity_fullscreen.xml
@@ -8,6 +8,42 @@
     <!-- The primary full-screen view. This can be replaced with whatever view
          is needed to present your content, e.g. VideoView, SurfaceView,
          TextureView, etc. -->
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/weatherresponse"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="#ffffff"
+            android:textSize="60pt"
+            android:fontFamily="sans-serif-light"
+            android:text="4°" />
+        <ImageView
+            android:layout_width="120px"
+            android:layout_height="120px"
+            android:id="@+id/weatherimage"
+            android:layout_toRightOf="@+id/weatherresponse"
+            android:layout_margin="10px"/>
+
+        <net.schnorbus.basti.homeview.util.CustomDigitalClock
+            android:id="@+id/digitalClock1"
+            android:textSize="60pt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Clock"
+            android:fontFamily="sans-serif-light"
+            android:textColor="#ffffff"
+            android:layout_alignParentRight="true"/>
+
+        <TextView
+            android:id="@+id/weathericon"
+            android:text="wolke"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:textColor="#ffffff"/>
+
+    </RelativeLayout>
     <TextView
         android:id="@+id/fullscreen_content"
         android:layout_width="match_parent"
